fix spacing on login

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -71,8 +71,13 @@ min-height:100%;
 }
 
 // LOGIN FORM
+.spacer {
+  height: 10%;
+  width: 100%;
+}
+
 .container {
-  height: 90%;
+  height: 80%;
   color:white;
   margin-left: auto;
   margin-right: auto;
